k3s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: examplerepeat
spec:
  type: ClusterIP
  selector:
    app: examplerepeat
  ports:
    - port: 80
      targetPort: 80
