k3s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: exampleRepeat
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: kanat.compnet.kz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: exampleRepeat
                port:
                  number: 80
    - host: kanat.compnet.kz
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: exampleRepeat
                port:
                  number: 80
